<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.LoginActivity">

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/second_3_ImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/second_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_text"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/kakao_login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle_all_corner_radius"
        android:padding="3dp"
        android:paddingStart="66dp"
        android:paddingEnd="68dp"
        android:scaleType="fitCenter"
        android:src="@drawable/kakao_login"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_3_ImageView"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.77" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_button_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kakao_login_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.73">

        <ImageView
            android:id="@+id/naverButton"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:scaleType="fitXY"
            android:layout_marginStart="40dp"
            android:src="@drawable/naver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/FrameLayout1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="66dp"
            android:layout_height="66dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/appleButton"
            app:layout_constraintStart_toEndOf="@id/naverButton"
            app:layout_constraintTop_toTopOf="parent">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_for_circle_button"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/appleButton"
                app:layout_constraintStart_toEndOf="@id/naverButton"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/fb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:onClick="onClick"
                android:background="@drawable/facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/appleButton"
                app:layout_constraintStart_toEndOf="@id/naverButton"
                app:layout_constraintTop_toTopOf="parent" />


        </FrameLayout>


        <ImageView
            android:id="@+id/appleButton"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:scaleType="fitCenter"
            android:src="@drawable/apple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="26dp"
            app:layout_constraintStart_toEndOf="@id/FrameLayout1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button_icon">

        <Button
            android:id="@+id/email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FF0000"
            android:text="@string/email_login"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/contour"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/contour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textColor="#9A9A9A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/email_join"
            app:layout_constraintStart_toEndOf="@id/email_login"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/email_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FF0000"
            android:text="@string/email_join"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/contour"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/login_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="로그인에 문제가 있으신가요?"
        android:textColor="#A5A5A5"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailConstraintLayout" />

    <Button
        android:id="@+id/Non_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#00FF0000"
        android:text="비회원 주문 조회하기"
        android:textColor="#3A3A3A"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_problem" />


</androidx.constraintlayout.widget.ConstraintLayout>