<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.Email_join_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/email_login_arrow_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:background="#00FF0000"
            android:scaleType="fitXY"
            android:src="@drawable/arrowleft"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="이메일 회원가입"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_login_arrow_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/forwardArrow"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#939393" />


            <Button
                android:id="@+id/interiorbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FF0000"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingEnd="3dp"
                android:text="인테리어 전문가이시다면"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/forwardArrow"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:hint="이메일"
                android:inputType="textEmailAddress"
                android:paddingStart="13dp"
                android:textColorHint="#BDBDBD"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/interiorbutton"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/email_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_email"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:hint="비밀번호"
                android:inputType="textWebPassword"
                android:paddingStart="13dp"
                android:textColorHint="#BDBDBD"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />

            <EditText
                android:id="@+id/edit_password2"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:hint="비밀번호 확인"
                android:inputType="textWebPassword"
                android:paddingStart="13dp"
                android:textColorHint="#BDBDBD"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_password"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:hint="별명(중복 불가)"
                android:inputType="text"
                android:paddingStart="13dp"
                android:textColorHint="#BDBDBD"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_password2"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_Accept"
                android:layout_width="0dp"
                android:layout_height="235dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_nickname"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="약관 동의"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/allCheckBox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="6dp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/mycheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/allAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="9dp"
                    android:text="전체 동의"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/allCheckBox"
                    app:layout_constraintTop_toTopOf="@id/allCheckBox"
                    app:layout_constraintWidth_default="percent" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="17dp"
                    android:background="#E8E8E8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/allAccept"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.9" />

                <TextView
                    android:id="@+id/ageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:gravity="start"
                    android:text="@string/age_string"
                    android:textColor="#464646"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view1" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/ageCheckBox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="6dp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/mycheck"
                    app:layout_constraintBottom_toBottomOf="@id/ageTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ageTextView" />

                <TextView
                    android:id="@+id/useTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/use_string"
                    android:textColor="#464646"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ageTextView" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/useCheckBox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/mycheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintTop_toBottomOf="@id/ageCheckBox"
                    app:layout_constraintWidth_default="percent" />

                <TextView
                    android:id="@+id/privacyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/privacy_string"
                    android:textColor="#464646"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/useTextView" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/privacyCheckBox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="6dp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/mycheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintTop_toBottomOf="@id/useCheckBox"
                    app:layout_constraintWidth_default="percent" />

                <TextView
                    android:id="@+id/eventTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/event_string"
                    android:textColor="#464646"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@id/privacyTextView" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/eventCheckBox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="6dp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/mycheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyCheckBox" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/friendTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="친구에게 추천받고 오셨나요?(선택사항)"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/constraint_Accept"
                app:layout_constraintTop_toBottomOf="@id/constraint_Accept" />

            <FrameLayout
                android:id="@+id/edit_Referral_code_frameLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="fill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/friendTextView"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9">

                <EditText
                    android:id="@+id/edit_Referral_code"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_rounded_corner_rectangle"
                    android:hint="추천코드 입력"
                    android:inputType="textWebEmailAddress"
                    android:paddingStart="13dp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/Referral_code_confirm"
                    android:layout_width="40dp"
                    android:layout_height="35sp"
                    android:scaleType="fitXY"
                    android:layout_marginStart="315dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ghkrdls"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:clickable="false"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="74dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.07"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/join_custom"
                app:layout_constraintTop_toBottomOf="@id/edit_Referral_code_frameLayout"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>